fixed flicker

--- a/frontend/my-app/src/index.css
+++ b/frontend/my-app/src/index.css
@@ -1,7 +1,3 @@
-*{
-  color:white;
-}
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
